<resources>
    <string name="app_name">Utilities</string>
    <string name="menu_custom_view">Custom View</string>

    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="undo">Undo</string>
    <string name="restart">Restart</string>
    <string name="delete">X</string>
    <string name="difficulty">Difficulty:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very Hard</string>
    <string name="menu_rank">Rank</string>
    <string name="item_rank_header_position">#</string>
    <string name="item_rank_header_name">Login name</string>
    <string name="item_rank_header_score">Score</string>
    <string name="item_rank_header_last_played">Last played</string>
    <string name="menu_rxjava">RxJava</string>
    <string name="menu_audio">Audio Focus</string>
    <string name="play">Play</string>
    <string name="menu_service">Service</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="start_foreground">Start foreground</string>
    <string name="stop_foreground">Stop foreground</string>
    <string name="menu_circular_progress_bar">Circular Progress Bar</string>
    <string name="show">Show</string>
    <string name="tap">Tap</string>
</resources>
