<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop" />

    <Button
        android:id="@+id/btnStartForeground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_foreground" />

    <Button
        android:id="@+id/btnStopForeground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_foreground" />
</LinearLayout>
