<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/positionTV"
        style="@style/TextView.Rank.Header"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/item_rank_header_position" />

    <TextView
        android:id="@+id/nameTV"
        style="@style/TextView.Rank.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@string/item_rank_header_name" />

    <TextView
        android:id="@+id/scoreTV"
        style="@style/TextView.Rank.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item_rank_header_score" />

    <TextView
        android:id="@+id/lastPlayedTV"
        style="@style/TextView.Rank.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/item_rank_header_last_played" />

    <ImageButton
        android:id="@+id/expandBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/expand_button"
        android:visibility="invisible" />
</LinearLayout>